Fixing container spacings

--- a/src/components/SocialRow/socialRow.css
+++ b/src/components/SocialRow/socialRow.css
@@ -17,6 +17,7 @@ a:link {
 
 @media (max-width: 550px) {
   .jumbo_social i {
+    margin-top: 3rem;
     font-size: 1.6rem;
   }
 }
