--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -28,7 +28,7 @@
 
 @media (max-width: 550px) {
   .jumbo {
-    height: 36rem;
+    height: 22rem;
   }
   .jumbo h1 {
     margin-top: 4rem;
