--- a/src/components/myJumbo/myJumbo.css
+++ b/src/components/myJumbo/myJumbo.css
@@ -28,7 +28,7 @@
     height: 10rem;
   }
   .myjumbo h1 {
-    margin-top: 2rem;
+    margin-top: 3rem;
     font-size: 1.75rem;
   }
 
